Revert "Integrate with ESLint, Prettier, Husky, and Lint Staged https://amanhimself.dev/blog/setup-nextjs-project-with-eslint-prettier-husky-lint-staged/"
This reverts commit 582d9a9c3236c54d200b2022df3f3039b4dd6205.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "lint": "next lint && tsc --noEmit",
         "lint:fix": "next lint --fix",
         "format": "prettier '*/**/*.ts' --check --ignore-unknown",
-        "format:fix": "prettier '*/**/*.ts' --write .",
-        "prepare": "husky install"
+         "format:fix": "prettier '*/**/*.ts' --write ."
     },
     "dependencies": {
         "next": "15.1.6",
@@ -25,7 +24,6 @@
         "eslint": "^9",
         "eslint-config-next": "15.1.6",
         "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.3",
         "husky": "^9.1.7",
         "lint-staged": "^15.4.3",
         "postcss": "^8",
