--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-    "name": "about-me",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint && tsc --noEmit",
-        "lint:fix": "next lint --fix",
-        "format": "prettier '*/**/*.ts' --check --ignore-unknown",
-         "format:fix": "prettier '*/**/*.ts' --write ."
-    },
-    "dependencies": {
-        "next": "15.1.6",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "eslint": "^9",
-        "eslint-config-next": "15.1.6",
-        "eslint-config-prettier": "^10.0.1",
-        "husky": "^9.1.7",
-        "lint-staged": "^15.4.3",
-        "postcss": "^8",
-        "prettier": "^3.4.2",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
-    }
+  "name": "about-me",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "format": "prettier --check '*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js",
+    "format:fix": "prettier --write '*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js",
+    "lint:fix": "next lint --fix"
+  },
+  "dependencies": {
+    "next": "15.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
