--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "about-me",
+  "name": "v1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tarunvelagala.github.io/v1/",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "format": "prettier --check '*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js",
     "format:fix": "prettier --write '*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js",
-    "lint:fix": "next lint --fix"
-  },
-  "dependencies": {
-    "next": "15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "lint:fix": "next lint --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,11 +24,15 @@
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "gh-pages": "^6.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
+    "next": "15.1.6",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
